# DjangoProject

./: .gitignore  Makefile  main.py  pyproject.toml
app/: admin.py  error_codes.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/: models.py  serializers.py  urls.py
auth_/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
authentication/: admin.py  error_codes.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/: config.py  functions.py  middleware.py  mixins.py  storage.py  utils.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
root/: settings.py  urls.py
templates/: verification_email.html
